--- a/public/css/app.css
+++ b/public/css/app.css
@@ -38,6 +38,18 @@
 .background-main {
   background-image: url("/images/jumbotron.jpg");
   height: 400px;
+  position: relative;
+}
+
+.background-main .img-prodotto {
+  position: absolute;
+  left: 20%;
+  bottom: -47px;
+}
+
+.bg-blue1 {
+  height: 70px;
+  background-color: #0282f9;
 }
 
 .main-container {
@@ -62,9 +74,9 @@
 }
 
 .main-container .container-button-load .button-load {
-  background-color: blue;
+  background-color: #0282f9;
   padding: 0px 51px;
-  border-color: blue;
+  border-color: #0282f9;
   cursor: pointer;
   color: white;
   line-height: 38px;
@@ -72,8 +84,8 @@
 
 .main-container .button-current {
   color: white;
-  background-color: blue;
-  border-color: blue;
+  background-color: #0282f9;
+  border-color: #0282f9;
   position: absolute;
   top: -81px;
   left: -3px;
@@ -88,7 +100,7 @@
 }
 
 .brand-container {
-  background-color: blue;
+  background-color: #0282f9;
   z-index: 10;
   position: relative;
 }
@@ -196,19 +208,63 @@
   color: white;
   background-color: #303030;
   padding: 15px;
-  border-color: blue;
+  border-color: #0282f9;
   cursor: pointer;
   font-size: 16px;
 }
 
 .background-enter .button-footer:hover {
-  background-color: blue;
+  background-color: #0282f9;
   border-color: white;
   box-shadow: 3px 3px black;
 }
 
 .background-enter .title-footer-icon {
-  color: blue;
+  color: #0282f9;
   padding-right: 25px;
+}
+
+.bg-blue1 {
+  height: 70px;
+  background-color: #0282f9;
+}
+
+.container-art {
+  border-top: 1px solid gray;
+  border-bottom: 1px solid gray;
+}
+
+.container-write {
+  border-bottom: 1px solid gray;
+}
+
+.container-add {
+  position: relative;
+  z-index: 99;
+  background-color: #f6f6f6;
+  padding-top: 50px;
+}
+
+.text-color {
+  color: #59bae3;
+}
+
+.container-object {
+  border-top: 1px solid gray;
+  margin-top: 90px;
+}
+
+.container-object .container-col {
+  border-right: 1px solid gray;
+  border-left: 1px solid gray;
+  padding: 10px 11px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.container-object .container-col .img-object {
+  width: 30px;
+  background: lightgray;
+  margin: 10px 0;
 }
 
