--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -38,6 +38,16 @@
 .background-main {
     background-image: url("/images/jumbotron.jpg");
     height: 400px;
+    position: relative;
+    .img-prodotto {
+        position: absolute;
+        left: 20%;
+        bottom: -47px;
+    }
+}
+.bg-blue1 {
+    height: 70px;
+    background-color: rgba(2, 130, 249, 255);
 }
 
 .main-container {
@@ -58,9 +68,9 @@
         text-align: center;
         padding-bottom: 20px;
         .button-load {
-            background-color: blue;
+            background-color: rgba(2, 130, 249, 255);
             padding: 0px 51px;
-            border-color: blue;
+            border-color: rgba(2, 130, 249, 255);
             cursor: pointer;
             color: white;
             line-height: 38px;
@@ -68,8 +78,8 @@
     }
     .button-current {
         color: white;
-        background-color: blue;
-        border-color: blue;
+        background-color: rgba(2, 130, 249, 255);
+        border-color: rgba(2, 130, 249, 255);
         position: absolute;
         top: -81px;
         left: -3px;
@@ -85,7 +95,7 @@
 }
 
 .brand-container {
-    background-color: blue;
+    background-color: rgba(2, 130, 249, 255);
     z-index: 10;
     position: relative;
     .brand {
@@ -189,19 +199,61 @@
         color: white;
         background-color: #303030;
         padding: 15px;
-        border-color: blue;
+        border-color: rgba(2, 130, 249, 255);
         cursor: pointer;
         font-size: 16px;
 
         &:hover {
-            background-color: blue;
+            background-color: rgba(2, 130, 249, 255);
             border-color: white;
             box-shadow: 3px 3px black;
         }
     }
 
     .title-footer-icon {
-        color: blue;
+        color: rgba(2, 130, 249, 255);
         padding-right: 25px;
+    }
+}
+
+.bg-blue1 {
+    height: 70px;
+    background-color: rgba(2, 130, 249, 255);
+}
+
+.container-art {
+    border-top: 1px solid gray;
+    border-bottom: 1px solid gray;
+}
+
+.container-write {
+    border-bottom: 1px solid gray;
+}
+
+.container-add {
+    position: relative;
+    z-index: 99;
+    background-color: rgba(246, 246, 246, 255);
+    padding-top: 50px;
+}
+
+.text-color {
+    color: #59bae3;
+}
+
+.container-object {
+    border-top: 1px solid gray;
+    margin-top: 90px;
+    .container-col {
+        border-right: 1px solid gray;
+        border-left: 1px solid gray;
+        padding: 10px 11px;
+        display: flex;
+        justify-content: space-between;
+        .img-object {
+            width: 30px;
+            background: lightgray;
+            margin: 10px 0;
+        }
     }
 }
